# NaLBaNA

./: .gitignore  LICENSE  README.md  pyproject.toml
src/NaLBaNA/: bayes_net.py  graphing.py  initialization.py  probabilities.py  prompts.py  tools.py  variables.py  visualization.py
tutorials/: causal_fork.ipynb  collider_bias.ipynb  confounding.ipynb  larger_system.ipynb
